# peregrine

./: .gitignore  Cargo.lock.bak  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
client/: Cargo.toml
client/src/: cache.rs  lib.rs  packet_sender.rs  storage.rs
desktop/: Cargo.toml
desktop/assets/: main.css
desktop/src/: main.rs
desktop/src/views/: change_credentials.rs  contacts.rs  create_group.rs  group_menu.rs  home.rs  invites.rs  mod.rs  other_user_account.rs  register_account.rs  session_validity_checker.rs
dev/: icon.ase
docker/: Dockerfile  docker-compose.yml  healthcheck.sh
docker/mysql-init/: init.sql
mobile/: Cargo.toml
mobile/src/: main.rs
mobile/src/views/: contacts.rs  create_group.rs  group_menu.rs  home.rs  invites.rs  mod.rs  other_user_account.rs  register_account.rs  session_validity_checker.rs
server/: Cargo.toml
server/src/: lib.rs  secret.rs
server/src/secret/: db.rs  mod.rs  storage.rs
shared/: Cargo.toml
shared/src/: lib.rs  limits.rs  storage.rs  types.rs
shared/src/crypto/: aes_gcm.rs  bee2rs.rs  mod.rs  x3dh.rs
ui/: Cargo.toml
ui/src/: echo.rs  lib.rs
web/: Cargo.toml
web/src/: main.rs
