[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "server",
    "client",
]

[workspace.dependencies]
dioxus = { version = "0.6" }
serde = { version = "1.0" }
base64 = { version = "0.22" }

# workspace
ui = { path = "ui" }
client = { path = "client" }
server = { path = "server" }
shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
