[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "server",
    "client",
]

[workspace.dependencies]
dioxus = "0.6"
serde = "1.0"
base64 = "0.22"
chrono = "0.4"
postcard = { version = "1.1", features = ["use-std"] }

# workspace
ui = { path = "ui" }
client = { path = "client" }
server = { path = "server" }
shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
