[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "server",
    "client",
]

[workspace.dependencies]
# We NEED https://github.com/DioxusLabs/dioxus/pull/4376 for Android support which was merged after the latest stable release
dioxus = { version = "0.7.0-alpha.3" }
serde = "1.0"
base64 = "0.22"
chrono = "0.4"
postcard = { version = "1.1", features = ["use-std"] }

# workspace
ui = { path = "ui" }
client = { path = "client" }
server = { path = "server" }
shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
