[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
base64 = { workspace = true }
ui = { workspace = true }
client = { workspace = true }
server = { workspace = true }
shared = { workspace = true }
tokio = { version = "1.45", features = ["time"] }
dioxus-free-icons = { version = "0.9", features = ["octicons"] }

[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "server/server"]
