[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
base64 = { workspace = true }
ui = { workspace = true }
client = { workspace = true }
server = { workspace = true }
shared = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1.45", features = ["time"] }
dioxus-free-icons = { version = "0.10.0-alpha.1", features = ["octicons"] }
postcard = { workspace = true }
dioxus-markdown = { version = "0.0", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = []
desktop = ["dioxus/desktop", "dep:rfd", "dep:dioxus-markdown"]
server = ["dioxus/server", "server/server"]
