[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
shared = { workspace = true }
chrono = { workspace = true }
mysql = { version = "26.0.0", features = ["chrono"] }
rand = "0.9.1"
postcard = { workspace = true }

[features]
default = []
server = []
