[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
serde = "1.0"
postcard = { version = "1.1", features = ["use-std"] }
atomic-write-file = "0.2"

[dependencies.bee2-rs]
git = "ssh://git@github.com/tpyauheni/bee2-rs.git"
version = "0.2.1"
features = ["belt-ctr", "belt-hmac", "belt-pbkdf2", "bign", "bash-full", "belt-dwp"]
optional = true

[features]
default = ["bee2-rs"]
bee2-rs = ["dep:bee2-rs"]
