[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router", "web"] }
ui = { workspace = true }
client = { workspace = true }
server = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "server/server"]
